BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Product_Metrics_vod__c.object
<CustomObject>
    <fields>
        <fullName>Incremental_Shift_BMS_CN__c</fullName>
        <label>Incremental Shift</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生倾向于ARB做为高血压合并冠心病;慢性心衰患者的治疗之一</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生认同ACEI是高血压合并冠心病;慢性心衰患者的基石治疗，并愿意选择处方蒙诺</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生将蒙诺做为高血压合并冠心病;慢性心衰患者 的首选治疗</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生倾向于处方ARB做为高血压合并卒中并伴发冠心病患者的治疗之一</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生认同ACEI是高血压合并卒中并伴发冠心病患者的基础治疗，并愿意选择处方蒙诺</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医生将蒙诺做为是高血压合并卒中并伴发冠心病患者的首选治疗</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthracycline containing regimen as 1st line adjuvant chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding Taxane (3-week) to anthracycline regimen as 1st line adjuvant chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding Taxol (3-week) to anthracycline regimen as 1st line adjuvant chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxol dose-dense regimen (biweekly or weekly) as superior chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stick on 4 (3-weekly or biweekly) to 12 (weekly) cycles of Taxol regimen as adjuvant chemotherapy in EBC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC as the 1st line adjuvant chemotherapy in advanced OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC (Q3w）as the 1st line chemotherapy  in advanced OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly regimen as the 1st line adjuvant chemotherapy in advanced OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stick on 6 to 8 cycles of TC adjuvant chemotherapy in advanced OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular add SU or AGI on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only when concern the side effect about SU or AGI,then choice add Onglyza on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular add Onglyza on Met for patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regard Onglyza as the first choice for the patient who Glucose uncontrol with mono Met dosage 1500mg above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular use SU or AGI for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only when concern the side effect about SU or AGI,then choice Onglyza for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular use Onglyza for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regard Onglyza as the first choice for new diagnosed T2DM patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于新诊断的2型糖尿病患者, 将格华止作为起始用药选择之一。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于新诊断的2型糖尿病患者, 将格华止作为起始用药的首选。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于所有T2DM患者，格华止主要1.5-2g。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于所有2型糖尿病患者，格华止全程使用。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>治疗慢乙肝，但没有处方ETV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>了解博路定(ETV)的疗效和耐药数据, 开始处方ETV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigator_Readiness__c</fullName>
        <description>Sample metric field.</description>
        <label>Investigator Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_Breast_Cancer_BMS_CN__c</fullName>
        <description>Is Achieved - Breast Cancer Adjuvant Chemotherapy</description>
        <label>Is Achieved08</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_Core_Message_BMS_CN__c</fullName>
        <description>Is Achieved - Core Message</description>
        <label>Is Achieved10</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_Defense_Generic_BMS_CN__c</fullName>
        <description>Is Achieved - Defense Generic</description>
        <label>Is Achieved11</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_HTN_With_CHD_BMS_CN__c</fullName>
        <description>Is Achieved - HTN with CHD</description>
        <label>Is Achieved04</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_HTN_With_MI_BMS_CN__c</fullName>
        <description>Is Achieved - HTN with MI (NSTEMI/STEMI)</description>
        <label>Is Achieved01</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_HTN_With_UA_PCI_BMS_CN__c</fullName>
        <description>Is Achieved - HTN with UA/A-PCI</description>
        <label>Is Achieved02</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_Heart_Failure_BMS_CN__c</fullName>
        <description>Is Achieved - Heart Failure</description>
        <label>Is Achieved03</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_NA_BMS_CN__c</fullName>
        <description>Is Achieved - N/A</description>
        <label>Is Achieved07</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_New_T2DM_Patients_BMS_CN__c</fullName>
        <description>Is Achieved - New T2DM patients</description>
        <label>Is Achieved05</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_OC_BMS_CN__c</fullName>
        <description>Is_Achieved_OC</description>
        <label>Is Achieved14</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_Ovarian_Cancer_BMS_CN__c</fullName>
        <description>Is Achieved - Ovarian Cancer</description>
        <label>Is Achieved09</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_SCLC_BMS_CN__c</fullName>
        <description>Is_Achieved_SCLC</description>
        <label>Is Achieved13</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_T3DM_Patients_BMS_CN__c</fullName>
        <description>Is Achieved - Glucose uncontrol with mono Met dosage 1500mg above T3DM patients</description>
        <label>Is Achieved06</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Achieved_TKR_Patients_BMS_CN__c</fullName>
        <description>Is Achieved for eliquis</description>
        <label>Is Achieved12</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KAM_Target_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KAM Target?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_BMS_CN__c</fullName>
        <label>Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Significant Gaps of Product Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -  Unable to comm general Med attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Significant gaps in TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Variable knowledge of TA on diff topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Some misunderstandings of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Minor Gaps in BMS Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - High level of general TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ability to accurately comm Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Detailed Product knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Child_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Child Account of the Child Account record</description>
        <label>Location Child</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Child)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Child_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Parent_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Parent Account of the Child Account record</description>
        <label>Location Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Parent)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Parent_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship where the product metrics are set</description>
        <label>Location</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loyalty_BMS_CN__c</fullName>
        <inlineHelpText>Test Help!</inlineHelpText>
        <label>Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MET_Rating_BMS_US__c</fullName>
        <label>MET Rating</label>
        <picklist>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MET_Segment_BMS_US__c</fullName>
        <label>MET Segment</label>
        <picklist>
            <picklistValues>
                <fullName>DPP4 Spreaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endo Segment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endo Type High GLP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLP-1 Non Regular Writer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLP-1 Regular Writer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLP1 Trialist /Long Insulin Preferrer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLP1s Non-trialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLp1s users, High Victoza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High DPP4-High Januvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High DPP4-High Onglyza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Generic, low value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Injectable Favorable Byetta Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Injectable Unfavorable Byetta Acces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Januvia Loyalists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Branded High Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Branded Higher Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Injectable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Injectable Favorable Byetta Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Injectable Unfavorable Byetta Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza Family Regular Writers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symlin Writers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Injectable Unfavorable Byetta Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Share_BMS__c</fullName>
        <label>Market Share</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Met_Quintile_BMS_US__c</fullName>
        <label>Met Quintile</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Movement__c</fullName>
        <description>Sample metric field.</description>
        <label>Movement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NBrx_MQT0_BMS_CA__c</fullName>
        <label>NBrx MQT0</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBrx_MQT_1_BMS_CA__c</fullName>
        <label>NBrx MQT-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBrx_MQT_2_BMS_CA__c</fullName>
        <label>NBrx MQT-2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRx_BMS__c</fullName>
        <label>NRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Patients_BMS__c</fullName>
        <label>New Patients</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_BMS_CN__c</fullName>
        <label>Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_OTC_BMS_CN__c</fullName>
        <description>OTC Segmentation</description>
        <label>Segmentation_OTC</label>
        <picklist>
            <picklistValues>
                <fullName>L-KEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_Q1_BMS_CN__c</fullName>
        <description>Product Knowledge(Q1)</description>
        <label>Product Knowledge(Q1)</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Significant Gaps of Product Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unable to comm general Med attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Significant gaps in TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Variable knowledge of TA on diff topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Some misunderstandings of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Minor Gaps in BMS Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - High level of general TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ability to accurately comm Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Detailed Product knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_Q2_BMS_CN__c</fullName>
        <label>Product Knowledge(Q2)</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Significant Gaps of Product Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unable to comm general Med attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Significant gaps in TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Variable knowledge of TA on diff topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Some misunderstandings of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Minor Gaps in BMS Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - High level of general TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ability to accurately comm Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Detailed Product knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge_Q3_BMS_CN__c</fullName>
        <description>Product Knowledge(Q3)</description>
        <label>Product Knowledge(Q3)</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Significant Gaps of Product Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unable to comm general Med attributes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Significant gaps in TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Variable knowledge of TA on diff topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Some misunderstandings of Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Minor Gaps in BMS Product Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - High level of general TA Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Ability to accurately comm Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Detailed Product knowledge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The products field is required and shows which product relates to the metric row.</description>
        <label>Products</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Products_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_BMS_CA__c</fullName>
        <label>Protocol</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Rating_BMS_CA__c</fullName>
        <description>Stores Rep Rating at Account / Product level</description>
        <label>Rep Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Rating_BMS_US__c</fullName>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Rep editable Rating field by Product by Account for MM users</description>
        <label>Rep Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_BMS_EMEA__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Late line user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing Use in 1st bio switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Line User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low or No IV Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glivec First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged Traditionalists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holistic Sprycel users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasigna Believers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconvinced Followers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cautious Experimenters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Believers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constrained Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customizers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Disease Mgrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt Focused Communicators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-driven Customizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Listener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal Generalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short-View Innovator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Sensitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task focused, low patient involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence Based Adopters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diligent SPAF Conservatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast, broad adoption of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More cautious adoption of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower, conservative use of DAAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest/No use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Eliquis Seg 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Eliquis Seg 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Sample metric field.</description>
        <label>Segment.</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>